--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="index_style.css"> <!-- Linker til en ekstern CSS-fil for styling -->
    </head>
    <body>
-      <div id="topBar_id"> <!-- En container til topbaren -->
+      <div id="topBar_id"> <!-- En container til topbaren - bruger ikke modul da man ikke skal kunne logge ud -->
          <h1>PORTFOLIOTRACKER</h1> <!-- Overskrift -->
      </div>
 
