--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -6,34 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accounts</title>
   <link rel="stylesheet" href="accounts_style.css">
+  <link href="shared_components.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
   <!-- Top Bar -->
-  <div id="topBar_id">
-    <h1>PORTFOLIOTRACKER</h1>
-    <form action="/logout" method="POST" style="display: inline;">
-      <button type="submit" id="logoutButton" title="Log ud">
-        <span class="material-symbols-outlined">
-          account_circle_off
-        </span>
-      </button>
-    </form>
-  </div>
+  <%- include('partials/topbar') %>
 
   <!-- Side Navigation -->
-  <ul>
-    <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a>
-    </li>
-    <li><a href="/portfolios"><span
-          class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-    <li><a href="/accounts" style="color: gray;"><span class="material-symbols-outlined"
-          style="color: gray;">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
-  </ul>
+  <%- include('partials/sidebar') %>
 
   <!-- Main Content -->
   <div id="mainContent">
