--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,33 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfoliotracker - Dashboard</title>
   <link href="dashboard_style.css" rel="stylesheet">
+  <link href="shared_components.css" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
-  <div id="topBar_id">
-    <h1>PORTFOLIOTRACKER</h1>
-    <form action="/logout" method="POST" style="display: inline;">
-      <button type="submit" id="logoutButton" title="Log ud">
-        <span class="material-symbols-outlined">
-          account_circle_off
-        </span>
-      </button>
-    </form>
-  </div>
+  <%- include('partials/topbar') %>
 
-  <ul>
-    <li><a href="/dashboard" style="color: gray;"><span class="material-symbols-outlined"
-          style="color: gray;">dashboard</span>Dashboard</a></li>
-    <li><a href="/portfolios"><span
-          class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-    <li><a href="/trade"><span class="material-symbols-outlined">query_stats</span>Market</a></li>
-    <li><a href="/accounts"><span
-          class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="/profile" style="color: gray;"><span class="material-symbols-outlined">person</span>Profile</a></li>
-  </ul>
+  <%- include('partials/sidebar') %>
 
 
   <div id="bodyIndholdContainer_id">
