rettet fejl dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,7 +24,7 @@
       <div id="totalVærdi_box_id">
         <span>Total værdi</span>
         <hr>
-        <span style="float: right;">&nbsp;<%= totalValue %> DKK</span> <!-- Viser den samlede værdi -->
+        <span>&nbsp;<%= totalValue %> DKK</span> <!-- Viser den samlede værdi -->
       </div>
 
       <div id="totalRealiseretVærdi_box_id">
