--- a/views/partials/topbar.ejs
+++ b/views/partials/topbar.ejs
@@ -1,3 +1,4 @@
+<!-- laver en topbar til at vise brugerens navn og en logout knap -->
 <div id="topBar_id">
     <h1>PORTFOLIOTRACKER</h1>
     <form action="/logout" method="POST" style="display: inline;">
