--- a/public/portfolios_style.css
+++ b/public/portfolios_style.css
@@ -24,7 +24,12 @@ h1 {
   padding: 0.8%;
   font-weight: normal;
 }
-
+h2{
+  font-family: normalSkrift;
+}
+h3{
+  font-family: normalSkrift;
+}
 
 ul {
   list-style-type: none;
@@ -73,6 +78,7 @@ li a:hover span {
   display: inline-block;
   margin-top: 2.7%;
   padding: 0px;
+  font-family: normalSkrift;
 
 }
 
@@ -87,6 +93,7 @@ li a:hover span {
   top: 0;
   display: flex;
   flex-direction: column;
+  font-family: normalSkrift;
 }
 
 .container {
@@ -123,11 +130,13 @@ li a:hover span {
 
 .table-container {
   margin-top: 20px;
+  font-family: normalSkrift;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
+  font-family: normalSkrift;
 }
 
 th,
@@ -167,10 +176,12 @@ th {
   align-items: center;
   gap: 8px;
   transition: background-color 0.3s ease;
+  font-family: normalSkrift;
 }
 
 .primary-btn:hover {
   background-color: #444;
+  
 }
 
 .primary-btn .material-symbols-outlined {
