--- a/public/portfolios_style.css
+++ b/public/portfolios_style.css
@@ -24,8 +24,14 @@ h1 {
   padding: 0.8%;
   font-weight: normal;
 }
-h2{
-  font-family: normalSkrift;
+h2 {
+  font-family: normalskrift; /* Bruger den brugerdefinerede skrifttype */
+  color: lightgray; /* Lys grå tekstfarve */
+  display: block; /* Viser som en blok */
+  margin-left: 5px; /* Indrykning fra venstre */
+  margin-top: 30px; /* Afstand fra toppen */
+  line-height: 0px; /* Linjeafstand */
+  font-size: 200%; /* Forstørrer teksten */
 }
 h3{
   font-family: normalSkrift;
@@ -97,7 +103,8 @@ li a:hover span {
 }
 
 .container {
-  margin-left: 240px;
+  margin-left: 275px;
+  margin-right: 97px;
   padding: 20px;
   flex-grow: 1;
 }
@@ -119,7 +126,7 @@ li a:hover span {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .stacked {
@@ -130,6 +137,7 @@ li a:hover span {
 
 .table-container {
   margin-top: 20px;
+
   font-family: normalSkrift;
 }
 
@@ -166,7 +174,7 @@ th {
 .primary-btn {
   background-color: #333;
   color: white;
-  padding: 10px 20px;
+  padding: 8px 15px;
   border: none;
   border-radius: 5px;
   font-family: normalSkrift;
@@ -174,7 +182,7 @@ th {
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 8px;
+  
   transition: background-color 0.3s ease;
   font-family: normalSkrift;
 }
